--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  
+  <parent>
+  	<groupId>com.jiangnan</groupId>
+  	<artifactId>es</artifactId>
+  	<version>0.0.1-SNAPSHOT</version>
+  	<relativePath>../es/pom.xml</relativePath>
+  </parent>
 
-  <groupId>com.jiangnan</groupId>
   <artifactId>es-schedule-quartz</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>es-schedule-quartz</name>
@@ -18,8 +23,33 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
       <scope>test</scope>
+    </dependency>
+    
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context-support</artifactId>
+    </dependency>
+    
+    <!-- quartz -->
+    <dependency>
+	    <groupId>org.quartz-scheduler</groupId>
+	    <artifactId>quartz</artifactId>
+ 	</dependency>
+ 	
+ 	<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>servlet-api</artifactId>
+		<scope>provided</scope>
+	</dependency>
+    
+    <dependency>
+    	<groupId>com.jiangnan</groupId>
+    	<artifactId>es-common</artifactId>
+    </dependency>
+    <dependency>
+    	<groupId>com.jiangnan</groupId>
+    	<artifactId>es-orm-mybatis</artifactId>
     </dependency>
   </dependencies>
 </project>
